--- a/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.csproj
+++ b/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.csproj
@@ -65,19 +65,28 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="APIBuilder.cs" />
-    <Compile Include="CycloramaViewer.cs" />
-    <Compile Include="CycloramaViewerEvents.cs" />
-    <Compile Include="Interfaces\ICycloramaViewer.cs" />
+    <Compile Include="Events\EventOpenImageErrorArgs.cs" />
+    <Compile Include="Coordinate.cs" />
+    <Compile Include="Events\EventRecordingClickArgs.cs" />
+    <Compile Include="Events\EventViewChangeArgs.cs" />
+    <Compile Include="Events\EventTileLoadErrorArgs.cs" />
+    <Compile Include="Orientation.cs" />
+    <Compile Include="PanoramaViewer.cs" />
+    <Compile Include="PanoramaViewerEvents.cs" />
+    <Compile Include="DownloadHandler.cs" />
+    <Compile Include="Events\EventViewerArgs.cs" />
+    <Compile Include="Interfaces\IPanoramaViewer.cs" />
     <Compile Include="Interfaces\IStreetSmartAPI.cs" />
     <Compile Include="Events\EventInitArgs.cs" />
-    <Compile Include="Events\EventLoginArgs.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Recording.cs" />
     <Compile Include="StreetSmartAPI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StreetSmartAPIException.cs" />
     <Compile Include="StreetSmartGUI.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -93,6 +102,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="ToDo.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\cef.redist.x64.3.2704.1432\build\cef.redist.x64.targets" Condition="Exists('..\packages\cef.redist.x64.3.2704.1432\build\cef.redist.x64.targets')" />
