- final version streetSmart .NET API   - Bug fixes   - Added address database   - improved demo application

--- a/StreetSmartAPI/Demo.WinForms/Demo.WinForms.x64.csproj
+++ b/StreetSmartAPI/Demo.WinForms/Demo.WinForms.x64.csproj
@@ -122,6 +122,8 @@ xcopy /Y "$(SolutionDir)StreetSmart.WinForms\bin\x64\$(ConfigurationName)\*.bin"
 xcopy /Y "$(SolutionDir)StreetSmart.WinForms\bin\x64\$(ConfigurationName)\*.dat" *
 xcopy /Y "$(SolutionDir)StreetSmart.WinForms\bin\x64\$(ConfigurationName)\*.pak" *
 xcopy /Y "$(SolutionDir)StreetSmart.WinForms\bin\x64\$(ConfigurationName)\*.exe" *
+mkdir locales
+xcopy /Y  "$(SolutionDir)StreetSmart.WinForms\bin\x64\$(ConfigurationName)\locales\*.pak" "locales\*"
 </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
