--- a/StreetSmartAPI/Demo.WinForms/Demo.WinForms.x64.csproj
+++ b/StreetSmartAPI/Demo.WinForms/Demo.WinForms.x64.csproj
@@ -33,7 +33,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\x64\Debug\</OutputPath>
+    <OutputPath>..\..\DemoAPI\Demo.WinForms\Debug\x64\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -42,7 +42,7 @@
     <PlatformTarget>x64</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\x64\Release\</OutputPath>
+    <OutputPath>..\..\DemoAPI\Demo.WinForms\Release\x64\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -111,13 +111,13 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy /Y "$(SolutionDir)StreetSmart.WinForms\bin\x64\$(ConfigurationName)\*.dll" *
-xcopy /Y "$(SolutionDir)StreetSmart.WinForms\bin\x64\$(ConfigurationName)\*.bin" *
-xcopy /Y "$(SolutionDir)StreetSmart.WinForms\bin\x64\$(ConfigurationName)\*.dat" *
-xcopy /Y "$(SolutionDir)StreetSmart.WinForms\bin\x64\$(ConfigurationName)\*.pak" *
-xcopy /Y "$(SolutionDir)StreetSmart.WinForms\bin\x64\$(ConfigurationName)\*.exe" *
+    <PostBuildEvent>xcopy /Y "$(SolutionDir)..\DemoAPI\Demo.WinForms\x64\*.dll" *
+xcopy /Y "$(SolutionDir)..\DemoAPI\Demo.WinForms\x64\*.bin" *
+xcopy /Y "$(SolutionDir)..\DemoAPI\Demo.WinForms\x64\*.dat" *
+xcopy /Y "$(SolutionDir)..\DemoAPI\Demo.WinForms\x64\*.pak" *
+xcopy /Y "$(SolutionDir)..\DemoAPI\Demo.WinForms\x64\*.exe" *
 mkdir locales
-xcopy /Y  "$(SolutionDir)StreetSmart.WinForms\bin\x64\$(ConfigurationName)\locales\*.pak" "locales\*"
+xcopy /Y  "$(SolutionDir)..\DemoAPI\Demo.WinForms\x64\locales\*.pak" "locales\*"
 </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
