--- a/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.x64.csproj
+++ b/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.x64.csproj
@@ -72,20 +72,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="APIBuilder.cs" />
-    <Compile Include="AddressSettings.cs" />
+    <Compile Include="Handlers\BrowserProcessHandler.cs" />
+    <Compile Include="Factories\APIFactory.cs" />
+    <Compile Include="Data\AddressSettings.cs" />
     <Compile Include="Coordinate.cs" />
-    <Compile Include="EventArgs.cs" />
+    <Compile Include="Data\NotifyPropertyChanged.cs" />
+    <Compile Include="Data\Options.cs" />
+    <Compile Include="Events\EventArgs.cs" />
     <Compile Include="Events\EventRecordingClickArgs.cs" />
     <Compile Include="Events\EventViewChangeArgs.cs" />
+    <Compile Include="Exceptions\LoginFailedException.cs" />
+    <Compile Include="Exceptions\ImageNotFoundException.cs" />
+    <Compile Include="Extensions\SecureStringExtension.cs" />
+    <Compile Include="Factories\OptionsFactory.cs" />
+    <Compile Include="Factories\AddressSettingsFactory.cs" />
+    <Compile Include="Interfaces\IAddressSettings.cs" />
+    <Compile Include="Interfaces\IOptions.cs" />
     <Compile Include="Interfaces\IEventArgs.cs" />
     <Compile Include="Orientation.cs" />
     <Compile Include="PanoramaViewer.cs" />
     <Compile Include="PanoramaViewerEvents.cs" />
-    <Compile Include="DownloadHandler.cs" />
+    <Compile Include="Handlers\DownloadHandler.cs" />
     <Compile Include="Interfaces\IPanoramaViewer.cs" />
     <Compile Include="Interfaces\IStreetSmartAPI.cs" />
-    <Compile Include="Events\EventInitArgs.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -94,7 +103,6 @@
     <Compile Include="Recording.cs" />
     <Compile Include="StreetSmartAPI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StreetSmartAPIException.cs" />
     <Compile Include="StreetSmartGUI.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -118,6 +126,7 @@
     </Content>
     <Content Include="ToDo.txt" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\cef.redist.x64.3.2883.1552\build\cef.redist.x64.targets" Condition="Exists('..\packages\cef.redist.x64.3.2883.1552\build\cef.redist.x64.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
