--- a/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.x86.csproj
+++ b/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.x86.csproj
@@ -99,20 +99,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddressSettings.cs" />
-    <Compile Include="APIBuilder.cs" />
+    <Compile Include="Handlers\BrowserProcessHandler.cs" />
+    <Compile Include="Factories\APIFactory.cs" />
+    <Compile Include="Data\AddressSettings.cs" />
     <Compile Include="Coordinate.cs" />
-    <Compile Include="EventArgs.cs" />
+    <Compile Include="Data\NotifyPropertyChanged.cs" />
+    <Compile Include="Data\Options.cs" />
+    <Compile Include="Events\EventArgs.cs" />
     <Compile Include="Events\EventRecordingClickArgs.cs" />
     <Compile Include="Events\EventViewChangeArgs.cs" />
+    <Compile Include="Exceptions\LoginFailedException.cs" />
+    <Compile Include="Exceptions\ImageNotFoundException.cs" />
+    <Compile Include="Extensions\SecureStringExtension.cs" />
+    <Compile Include="Factories\OptionsFactory.cs" />
+    <Compile Include="Factories\AddressSettingsFactory.cs" />
+    <Compile Include="Interfaces\IAddressSettings.cs" />
+    <Compile Include="Interfaces\IOptions.cs" />
     <Compile Include="Interfaces\IEventArgs.cs" />
     <Compile Include="Orientation.cs" />
     <Compile Include="PanoramaViewer.cs" />
     <Compile Include="PanoramaViewerEvents.cs" />
-    <Compile Include="DownloadHandler.cs" />
+    <Compile Include="Handlers\DownloadHandler.cs" />
     <Compile Include="Interfaces\IPanoramaViewer.cs" />
     <Compile Include="Interfaces\IStreetSmartAPI.cs" />
-    <Compile Include="Events\EventInitArgs.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -121,7 +130,6 @@
     <Compile Include="Recording.cs" />
     <Compile Include="StreetSmartAPI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StreetSmartAPIException.cs" />
     <Compile Include="StreetSmartGUI.cs">
       <SubType>UserControl</SubType>
     </Compile>
