--- a/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.x64.csproj
+++ b/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.x64.csproj
@@ -72,24 +72,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\ProductType.cs" />
+    <Compile Include="Interfaces\TileSchema.cs" />
+    <Compile Include="Data\RecordingClickInfo.cs" />
+    <Compile Include="Factories\OrientationFactory.cs" />
+    <Compile Include="Factories\CoordinateFactory.cs" />
     <Compile Include="Handlers\BrowserProcessHandler.cs" />
-    <Compile Include="Factories\APIFactory.cs" />
+    <Compile Include="Factories\StreetSmartAPIFactory.cs" />
     <Compile Include="Data\AddressSettings.cs" />
-    <Compile Include="Coordinate.cs" />
+    <Compile Include="Data\Coordinate.cs" />
     <Compile Include="Data\NotifyPropertyChanged.cs" />
     <Compile Include="Data\Options.cs" />
     <Compile Include="Events\EventArgs.cs" />
-    <Compile Include="Events\EventRecordingClickArgs.cs" />
-    <Compile Include="Events\EventViewChangeArgs.cs" />
     <Compile Include="Exceptions\LoginFailedException.cs" />
     <Compile Include="Exceptions\ImageNotFoundException.cs" />
     <Compile Include="Extensions\SecureStringExtension.cs" />
     <Compile Include="Factories\OptionsFactory.cs" />
     <Compile Include="Factories\AddressSettingsFactory.cs" />
+    <Compile Include="Interfaces\IRecordingClickInfo.cs" />
+    <Compile Include="Interfaces\ICoordinate.cs" />
     <Compile Include="Interfaces\IAddressSettings.cs" />
     <Compile Include="Interfaces\IOptions.cs" />
     <Compile Include="Interfaces\IEventArgs.cs" />
-    <Compile Include="Orientation.cs" />
+    <Compile Include="Data\Orientation.cs" />
+    <Compile Include="Interfaces\IOrientation.cs" />
+    <Compile Include="Interfaces\IRecording.cs" />
     <Compile Include="PanoramaViewer.cs" />
     <Compile Include="PanoramaViewerEvents.cs" />
     <Compile Include="Handlers\DownloadHandler.cs" />
@@ -100,7 +107,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Recording.cs" />
+    <Compile Include="Data\Recording.cs" />
     <Compile Include="StreetSmartAPI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StreetSmartGUI.cs">
