--- a/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.x86.csproj
+++ b/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.x86.csproj
@@ -99,7 +99,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\DomElement\DomElement.cs" />
+    <Compile Include="Data\PanoramaViewerOptions.cs" />
+    <Compile Include="Factories\DomElementFactory.cs" />
+    <Compile Include="Factories\PanoramaViewerOptionsFactory.cs" />
+    <Compile Include="Interfaces\IPanoramaViewerOptions.cs" />
+    <Compile Include="Interfaces\StyleElementNumberType.cs" />
+    <Compile Include="Data\DomElement\StyleElementNumberValue.cs" />
+    <Compile Include="Data\DomElement\StyleElementValue.cs" />
+    <Compile Include="Data\DomElement\StyleElement.cs" />
+    <Compile Include="Data\DomElement\Style.cs" />
+    <Compile Include="Interfaces\StyleElementName.cs" />
+    <Compile Include="Extensions\EnumExtensions.cs" />
+    <Compile Include="Interfaces\IDomElement.cs" />
     <Compile Include="Interfaces\ProductType.cs" />
+    <Compile Include="Interfaces\IStyle.cs" />
     <Compile Include="Interfaces\TileSchema.cs" />
     <Compile Include="Data\RecordingClickInfo.cs" />
     <Compile Include="Factories\OrientationFactory.cs" />
@@ -111,9 +125,9 @@
     <Compile Include="Data\NotifyPropertyChanged.cs" />
     <Compile Include="Data\Options.cs" />
     <Compile Include="Events\EventArgs.cs" />
-    <Compile Include="Exceptions\LoginFailedException.cs" />
-    <Compile Include="Exceptions\ImageNotFoundException.cs" />
-    <Compile Include="Extensions\SecureStringExtension.cs" />
+    <Compile Include="Exceptions\StreetSmartLoginFailedException.cs" />
+    <Compile Include="Exceptions\StreetSmartImageNotFoundException.cs" />
+    <Compile Include="Extensions\SecureStringExtensions.cs" />
     <Compile Include="Factories\OptionsFactory.cs" />
     <Compile Include="Factories\AddressSettingsFactory.cs" />
     <Compile Include="Interfaces\IRecordingClickInfo.cs" />
@@ -124,8 +138,8 @@
     <Compile Include="Data\Orientation.cs" />
     <Compile Include="Interfaces\IOrientation.cs" />
     <Compile Include="Interfaces\IRecording.cs" />
-    <Compile Include="PanoramaViewer.cs" />
-    <Compile Include="PanoramaViewerEvents.cs" />
+    <Compile Include="API\PanoramaViewer.cs" />
+    <Compile Include="API\PanoramaViewerList.cs" />
     <Compile Include="Handlers\DownloadHandler.cs" />
     <Compile Include="Interfaces\IPanoramaViewer.cs" />
     <Compile Include="Interfaces\IStreetSmartAPI.cs" />
@@ -135,7 +149,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Data\Recording.cs" />
-    <Compile Include="StreetSmartAPI.cs" />
+    <Compile Include="API\StreetSmartAPI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StreetSmartGUI.cs">
       <SubType>UserControl</SubType>
