--- a/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.x64.csproj
+++ b/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.x64.csproj
@@ -75,12 +75,22 @@
     <Compile Include="API\Events\PanoramaRecordingClickViewerEvent.cs" />
     <Compile Include="API\Events\PanoramaViewerEventList.cs" />
     <Compile Include="API\Events\PanoramaViewerEvent.cs" />
+    <Compile Include="API\ObliqueViewerList.cs" />
+    <Compile Include="API\ObliqueViewer.cs" />
+    <Compile Include="API\ViewerList.cs" />
+    <Compile Include="Data\ViewerTypes.cs" />
+    <Compile Include="Data\ViewerOptions.cs" />
     <Compile Include="Data\DomElement\DomElement.cs" />
     <Compile Include="Data\PanoramaViewerOptions.cs" />
     <Compile Include="Extensions\BoolExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Factories\ViewerOptionsFactory.cs" />
     <Compile Include="Factories\DomElementFactory.cs" />
     <Compile Include="Factories\PanoramaViewerOptionsFactory.cs" />
+    <Compile Include="Interfaces\IObliqueViewer.cs" />
+    <Compile Include="Interfaces\IViewer.cs" />
+    <Compile Include="Interfaces\IViewerTypes.cs" />
+    <Compile Include="Interfaces\IViewerOptions.cs" />
     <Compile Include="Interfaces\IPanoramaViewerOptions.cs" />
     <Compile Include="Interfaces\StyleElementNumberType.cs" />
     <Compile Include="Data\DomElement\StyleElementNumberValue.cs" />
@@ -121,6 +131,7 @@
     <Compile Include="Handlers\DownloadHandler.cs" />
     <Compile Include="Interfaces\IPanoramaViewer.cs" />
     <Compile Include="Interfaces\IStreetSmartAPI.cs" />
+    <Compile Include="Interfaces\ViewerType.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -135,6 +146,7 @@
     <Compile Include="StreetSmartGUI.Designer.cs">
       <DependentUpon>StreetSmartGUI.cs</DependentUpon>
     </Compile>
+    <Compile Include="Utils\JsNameGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
