--- a/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.x86.csproj
+++ b/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.x86.csproj
@@ -106,19 +106,23 @@
     <Compile Include="API\ObliqueViewerList.cs" />
     <Compile Include="API\ViewerList.cs" />
     <Compile Include="Data\DomElement\DomElement.cs" />
+    <Compile Include="Data\MeasurementOptions.cs" />
     <Compile Include="Data\PanoramaViewerOptions.cs" />
     <Compile Include="Data\ViewerOptions.cs" />
     <Compile Include="Data\ViewerTypes.cs" />
     <Compile Include="Extensions\BoolExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Factories\DomElementFactory.cs" />
+    <Compile Include="Factories\MeasurementOptionsFactory.cs" />
     <Compile Include="Factories\PanoramaViewerOptionsFactory.cs" />
     <Compile Include="Factories\ViewerOptionsFactory.cs" />
+    <Compile Include="Interfaces\IMeasurementOptions.cs" />
     <Compile Include="Interfaces\IObliqueViewer.cs" />
     <Compile Include="Interfaces\IPanoramaViewerOptions.cs" />
     <Compile Include="Interfaces\IViewer.cs" />
     <Compile Include="Interfaces\IViewerOptions.cs" />
     <Compile Include="Interfaces\IViewerTypes.cs" />
+    <Compile Include="Interfaces\MeasurementGeometryType.cs" />
     <Compile Include="Interfaces\StyleElementNumberType.cs" />
     <Compile Include="Data\DomElement\StyleElementNumberValue.cs" />
     <Compile Include="Data\DomElement\StyleElementValue.cs" />
