--- a/DemoAPI/Demo.WinForms/Demo.WinForms.x86.csproj
+++ b/DemoAPI/Demo.WinForms/Demo.WinForms.x86.csproj
@@ -177,7 +177,8 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy /Y "$(ProjectDir)x86\*.*" *
-</PostBuildEvent>
+md locales
+xcopy /Y "$(ProjectDir)x64\locales\*.*" locales\*</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
