--- a/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.x64.csproj
+++ b/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.x64.csproj
@@ -76,10 +76,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="API\Events\StreetSmartApiEvent.cs" />
     <Compile Include="API\Events\PanoramaRecordingClickViewerEvent.cs" />
     <Compile Include="API\Events\ApiEventList.cs" />
     <Compile Include="API\Events\ApiEvent.cs" />
     <Compile Include="API\Events\MeasurementEvent.cs" />
+    <Compile Include="API\Events\ViewerEvent.cs" />
     <Compile Include="API\Events\PanoramaViewerEvent.cs" />
     <Compile Include="API\ObliqueViewerList.cs" />
     <Compile Include="API\ObliqueViewer.cs" />
